# mydata-chatbot

./: .dockerignore  .env.sample  .gitignore  README.md  gunicorn.conf.py  logging.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_async.py
.streamlit/: config.toml
chroma/mydata_api_docs/765b92c4-b6ed-4d88-9e16-7c6d998d25c4/: index_metadata.pickle
chroma/mydata_api_docs/f7ae652c-3e95-4fb1-9f2d-4540bb76a20b/: index_metadata.pickle
chroma/mydata_other_docs/: chroma.sqlite3
directories/: __init__.py
dockers/: fastapi.Dockerfile  streamlit.Dockerfile
mydata_chatbot/: __init__.py
mydata_chatbot/agents/: __init__.py  gpt.py
mydata_chatbot/apis/: __init__.py
mydata_chatbot/apps/: __init__.py
mydata_chatbot/assemble/: callbacks.py  event.py  middleware.py  responses.py
mydata_chatbot/configs/: __init__.py
mydata_chatbot/crud/: account.py  base.py  chat_history.py  document.py
mydata_chatbot/database/: __init__.py
mydata_chatbot/models/: __init__.py  account.py  document.py
mydata_chatbot/schemas/: chat.py  document.py  prompt.py
preprocess/: md_to_vectordb.py  pdf_to_md.py  preprocess.py
pymupdf4llm/helpers/: get_text_lines.py  multi_column.py  pymupdf_rag.py
rag_backend/agents/: __init__.py  gpt.py  prompts.py  retrievers.py  tools.py
rag_backend/assemble/: exception.py
rag_backend/configs/: __init__.py
rag_backend/conversation/: __init__.py
rag_backend/crud/: account.py  base.py  document.py
rag_backend/database/: __init__.py  chroma.py
rag_backend/models/: __init__.py  account.py  document.py
rag_backend/schemas/: account.py  document.py
tests/: conftest.py  locustfile.py
tests/apis/: test_examples.py
(+15 files in other folders)
