[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = ""
authors = ["Hongmin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.40.2"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
langchain-openai = "^0.1.20"
pydantic = "^2.8.2"
pytest = "^8.3.2"
pydantic-settings = "^2.4.0"
pytest-asyncio = "^0.23.8"
pypdf = "^4.3.1"
sqlalchemy = "^2.0.32"
pymupdf = "^1.24.9"
pandas = "^2.2.2"
langchain-chroma = "^0.1.2"
python-multipart = "^0.0.9"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
aiofiles = "^24.1.0"
tavily-python = "^0.3.7"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.3"
streamlit = "^1.37.1"
black = "^24.8.0"
watchdog = "^4.0.2"
opentelemetry-exporter-otlp-proto-grpc = "1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
