[tool.poetry]
name = "mydata_chatbot"
version = "0.1.0"
description = ""
authors = ["Hongmin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
langchain = "^0.2.13"
langchain-community = "^0.2.12"
streamlit = "^1.37.1"
langchain-openai = "^0.1.21"
pydantic-settings = "^2.4.0"
aiosqlite = "^0.20.0"
langchain-chroma = "^0.1.2"
protobuf = "3.20"
aiofiles = "^24.1.0"
pymupdf = "^1.24.9"
python-multipart = "^0.0.9"
greenlet = "^3.0.3"
watchdog = "^4.0.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-env = "^1.1.3"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
